Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI422.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned char BYTE;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long BASEADDR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
/**
*
*  Structs used by the BTI422 Driver.
*
**/
typedef struct
{
	BYTE   data;
	USHORT status;
	ULONG  timetag;
	ULONG  timetagh;
} FIFOFIELDS422;
typedef FIFOFIELDS422 * LPFIFOFIELDS422;
/**
*
*  BTI422 Driver functions.
*
**/

BTI422API INT __stdcall BTI422_FIFOCheckRx(INT portnum,HCORE handleval);
BTI422API INT __stdcall BTI422_FIFOCheckTx(INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_FIFOConfigRx(ULONG configval,INT threshold,INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_FIFOConfigTx(ULONG configval,INT threshold,INT portnum,HCORE handleval);
BTI422API INT __stdcall BTI422_FIFODataRd(LPBYTE buf,INT count,LPULONG status,INT portnum,HCORE handleval);
BTI422API INT __stdcall BTI422_FIFODataWr(LPBYTE buf,INT count,ULONG ctrlflags,INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_FIFOFlushRx(INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_FIFOFlushTx(INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_FIFOGapWr(USHORT gapcount,ULONG ctrlflags,INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_ParamAmplitudeConfig(ULONG configval,USHORT dacval,INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_ParamAmplitudeGet(LPUSHORT dacval,INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_PortConfig(ULONG configval,USHORT bitrateflag,INT portnum,HCORE handleval);
BTI422API VOID __stdcall BTI422_PortGetCount(LPINT portcount,HCORE handleval);
BTI422API ULONG __stdcall BTI422_PortGetInfo(USHORT infotype,INT portnum,HCORE handleval);
BTI422API BOOL __stdcall BTI422_PortIs422(INT portnum,HCORE handleval);
BTI422API BOOL __stdcall BTI422_PortStart(INT portnum,HCORE handleval);
BTI422API BOOL __stdcall BTI422_PortStop(INT portnum,HCORE handleval);
/**
*
*  Internal functions used by the BTI422 Driver.
*
**/

BTI422API INT __stdcall BTI422_DllUsageCount(VOID);
BTI422API INT __stdcall BTI422_FIFOBlockRd(LPFIFOFIELDS422 fifofields,INT count,INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_ParamClockConfig(ULONG period,USHORT divval,INT portnum,HCORE handleval);
BTI422API BASEADDR __stdcall BTI422_PortCreate(INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_PortReset(INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_TestProtocol(HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_VARFindPort(LPUSHORT addrval,INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_VARLastTTGet(LPULONG tth,LPULONG ttl,INT portnum,HCORE handleval);
BTI422API ERRVAL __stdcall BTI422_VARLastTTSet(ULONG tth,ULONG ttl,INT portnum,HCORE handleval);
BTI422API BOOL __stdcall BTI422_VARPortHasLocalFIFO(INT portnum,HCORE handleval);
/**
*
*  Port number constants
*
**/

#define PORT0  0x0000          //Port 0
#define	PORT1  0x0001          //Port 1
#define	PORT2  0x0002          //Port 2
#define	PORT3  0x0003          //Port 3
#define	PORT4  0x0004          //Port 4
#define	PORT5  0x0005          //Port 5
#define	PORT6  0x0006          //Port 6
#define	PORT7  0x0007          //Port 7
#define	PORT8  0x0008          //Port 8
#define	PORT9  0x0009          //Port 9
#define	PORT10 0x000A          //Port 10
#define	PORT11 0x000B          //Port 11
#define	PORT12 0x000C          //Port 12
#define	PORT13 0x000D          //Port 13
#define	PORT14 0x000E          //Port 14
#define	PORT15 0x000F          //Port 15
#define	PORT16 0x0010          //Port 16
#define	PORT17 0x0011          //Port 17
#define	PORT18 0x0012          //Port 18
#define	PORT19 0x0013          //Port 19
#define	PORT20 0x0014          //Port 20
#define	PORT21 0x0015          //Port 21
#define	PORT22 0x0016          //Port 22
#define	PORT23 0x0017          //Port 23
#define	PORT24 0x0018          //Port 24
#define	PORT25 0x0019          //Port 25
#define	PORT26 0x001A          //Port 26
#define	PORT27 0x001B          //Port 27
#define	PORT28 0x001C          //Port 28
#define	PORT29 0x001D          //Port 29
#define	PORT30 0x001E          //Port 30
#define	PORT31 0x001F          //Port 31
/**
*
*  Bitrate configuration options
*
**/

#define	BITRATE422_CLK1            0x8000      //CLK1, 20 MHz (default)
#define	BITRATE422_CLK2            0x0000      //CLK2, 9.216 MHz (standard option)
#define	BITRATE422_CLK3            0x1000      //CLK3, Parametric clock
#define	BITRATE422_XMTSLOPEHIGH    0x0000      //Transmit with high speed slope (default)
#define	BITRATE422_XMTSLOPELOW     0x4000      //Transmit with low speed slope
// These defines assume an external clock of 9.216 MHz
#define	BITRATE422_921600BPS   0x0000          //External Clock, Div = 0
#define	BITRATE422_460800BPS   0x0001          //External Clock, Div = 1
#define	BITRATE422_230400BPS   0x0003          //External Clock, Div = 3
#define	BITRATE422_115200BPS   0x0007          //External Clock, Div = 7
#define	BITRATE422_57600BPS    0x000F          //External Clock, Div = 15
#define	BITRATE422_38400BPS    0x0017          //External Clock, Div = 23
#define	BITRATE422_28800BPS    0x001F          //External Clock, Div = 31
#define	BITRATE422_19200BPS    0x002F          //External Clock, Div = 47
#define	BITRATE422_14400BPS    0x003F          //External Clock, Div = 63
#define	BITRATE422_9600BPS     0x005F          //External Clock, Div = 95
#define	BITRATE422_7200BPS     0x007F          //External Clock, Div = 127
#define	BITRATE422_4800BPS     0x00BF          //External Clock, Div = 191
#define	BITRATE422_3600BPS     0x00FF          //External Clock, Div = 255
#define	BITRATE422_2400BPS     0x017F          //External Clock, Div = 383
#define	BITRATE422_1800BPS     0x01FF          //External Clock, Div = 511
#define	BITRATE422_1200BPS     0x02FF          //External Clock, Div = 767
#define	BITRATE422_900BPS      0x03FF          //External Clock, Div = 1023
#define	BITRATE422_600BPS      0x05FF          //External Clock, Div = 1535
#define	BITRATE422_300BPS      0x0BFF          //External Clock, Div = 3071
#define	BITRATE422_1000000BPS  0x8001          //Internal Clock, Div = 1
#define	BITRATE422_500000BPS   0x8003          //Internal Clock, Div = 3
#define	BITRATE422_400000BPS   0x8004          //Internal Clock, Div = 4
#define	BITRATE422_250000BPS   0x8007          //Internal Clock, Div = 7
#define	BITRATE422_200000BPS   0x8009          //Internal Clock, Div = 9
#define	BITRATE422_100000BPS   0x8013          //Internal Clock, Div = 19
#define	BITRATE422_80000BPS    0x8018          //Internal Clock, Div = 24
#define	BITRATE422_50000BPS    0x8027          //Internal Clock, Div = 39
#define	BITRATE422_40000BPS    0x8031          //Internal Clock, Div = 49
#define	BITRATE422_25000BPS    0x804F          //Internal Clock, Div = 79
#define	BITRATE422_20000BPS    0x8063          //Internal Clock, Div = 99
#define	BITRATE422_12500BPS    0x809F          //Internal Clock, Div = 159
#define	BITRATE422_10000BPS    0x80C7          //Internal Clock, Div = 199