Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI422VB.BAS

'/**
'*
'*  BTI422 WIN32 DRIVER  Version 1.2.0  (05/11/2015)
'*  Copyright (c) 2004-2015
'*  Ballard Technology, Inc.
'*  www.ballardtech.com
'*  support@ballardtech.com
'*  ALL RIGHTS RESERVED
'*
'*  NAME:   BTI422.BAS -- VB6 32-bit
'*                      BTI422 Driver Include Header File.
'*
'**/

'/**
'*
'*  Structs used by the BTI422 Driver.
'*
'**/
Public Type FIFOFIELDS422
	data As Byte
	status As Integer
	timetag As Long
	timetagh As Long
End Type

'/**
'*
'*  BTI422 Driver functions.
'*
'**/

'/**
'*
'*  Internal functions used by the BTI422 Driver.
'*
'**/

Public Declare Function BTI422_FIFOCheckRx Lib "BTI422.DLL" Alias "_BTI422_FIFOCheckRx@8" (ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_FIFOCheckTx Lib "BTI422.DLL" Alias "_BTI422_FIFOCheckTx@8" (ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_FIFOConfigRx Lib "BTI422.DLL" Alias "_BTI422_FIFOConfigRx@16" (ByVal configval As Long, ByVal threshold As Long, ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_FIFOConfigTx Lib "BTI422.DLL" Alias "_BTI422_FIFOConfigTx@16" (ByVal configval As Long, ByVal threshold As Long, ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_FIFODataRd Lib "BTI422.DLL" Alias "_BTI422_FIFODataRd@20" (ByRef buf As Byte, ByVal count As Long, ByRef status As Long, ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_FIFODataWr Lib "BTI422.DLL" Alias "_BTI422_FIFODataWr@20" (ByRef buf As Byte, ByVal count As Long, ByVal ctrlflags As Long, ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_FIFOBlockRd Lib "BTI422.DLL" Alias "_BTI422_FIFOBlockRd@16" (ByRef fifofields As FIFOFIELDS422, ByVal count As Long, ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_FIFOFlushRx Lib "BTI422.DLL" Alias "_BTI422_FIFOFlushRx@8" (ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_FIFOFlushTx Lib "BTI422.DLL" Alias "_BTI422_FIFOFlushTx@8" (ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_FIFOGapWr Lib "BTI422.DLL" Alias "_BTI422_FIFOGapWr@16" (ByVal gapcount As Integer, ByVal ctrlflags As Long, ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_ParamAmplitudeConfig Lib "BTI422.DLL" Alias "_BTI422_ParamAmplitudeConfig@16" (ByVal configval As Long, ByVal dacval As Integer, ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_ParamAmplitudeGet Lib "BTI422.DLL" Alias "_BTI422_ParamAmplitudeGet@12" (ByRef dacval As Integer, ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_PortConfig Lib "BTI422.DLL" Alias "_BTI422_PortConfig@16" (ByVal configval As Long, ByVal bitrateflag As Integer, ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI422_PortGetCount Lib "BTI422.DLL" Alias "_BTI422_PortGetCount@8" (ByRef portcount As Long, ByVal handleval As Long)
Public Declare Function BTI422_PortGetInfo Lib "BTI422.DLL" Alias "_BTI422_PortGetInfo@12" (ByVal infotype As Integer, ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_PortIs422 Lib "BTI422.DLL" Alias "_BTI422_PortIs422@8" (ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_PortStart Lib "BTI422.DLL" Alias "_BTI422_PortStart@8" (ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_PortStop Lib "BTI422.DLL" Alias "_BTI422_PortStop@8" (ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_ParamClockConfig Lib "BTI422.DLL" Alias "_BTI422_ParamClockConfig@16" (ByVal period As Long, ByVal divval As Integer, ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_DllUsageCount Lib "BTI422.DLL" Alias "_BTI422_DllUsageCount@0" () As Long
Public Declare Function BTI422_PortCreate Lib "BTI422.DLL" Alias "_BTI422_PortCreate@8" (ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_PortReset Lib "BTI422.DLL" Alias "_BTI422_PortReset@8" (ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_TestProtocol Lib "BTI422.DLL" Alias "_BTI422_TestProtocol@4" (ByVal handleval As Long) As Long
Public Declare Function BTI422_VARPortHasLocalFIFO Lib "BTI422.DLL" Alias "_BTI422_VARPortHasLocalFIFO@8" (ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_VARLastTTGet Lib "BTI422.DLL" Alias "_BTI422_VARLastTTGet@16" (ByRef tth As Long, ByRef ttl As Long, ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_VARLastTTSet Lib "BTI422.DLL" Alias "_BTI422_VARLastTTSet@16" (ByVal tth As Long, ByVal ttl As Long, ByVal portnum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI422_VARFindPort Lib "BTI422.DLL" Alias "_BTI422_VARFindPort@12" (ByRef addrval As Integer, ByVal portnum As Long, ByVal handleval As Long) As Long

'/**
'*
'*  Port number constants
'*
'**/

Public Const PORT0 As Integer = &H0  '//Port 0
Public Const PORT1 As Integer = &H1  '//Port 1
Public Const PORT2 As Integer = &H2  '//Port 2
Public Const PORT3 As Integer = &H3  '//Port 3
Public Const PORT4 As Integer = &H4  '//Port 4
Public Const PORT5 As Integer = &H5  '//Port 5
Public Const PORT6 As Integer = &H6  '//Port 6
Public Const PORT7 As Integer = &H7  '//Port 7
Public Const PORT8 As Integer = &H8  '//Port 8
Public Const PORT9 As Integer = &H9  '//Port 9
Public Const PORT10 As Integer = &HA '//Port 10
Public Const PORT11 As Integer = &HB '//Port 11
Public Const PORT12 As Integer = &HC '//Port 12
Public Const PORT13 As Integer = &HD '//Port 13
Public Const PORT14 As Integer = &HE '//Port 14
Public Const PORT15 As Integer = &HF '//Port 15
Public Const PORT16 As Integer = &H10 '//Port 16
Public Const PORT17 As Integer = &H11 '//Port 17
Public Const PORT18 As Integer = &H12 '//Port 18
Public Const PORT19 As Integer = &H13 '//Port 19
Public Const PORT20 As Integer = &H14 '//Port 20
Public Const PORT21 As Integer = &H15 '//Port 21
Public Const PORT22 As Integer = &H16 '//Port 22
Public Const PORT23 As Integer = &H17 '//Port 23
Public Const PORT24 As Integer = &H18 '//Port 24
Public Const PORT25 As Integer = &H19 '//Port 25
Public Const PORT26 As Integer = &H1A '//Port 26
Public Const PORT27 As Integer = &H1B '//Port 27
Public Const PORT28 As Integer = &H1C '//Port 28
Public Const PORT29 As Integer = &H1D '//Port 29
Public Const PORT30 As Integer = &H1E '//Port 30
Public Const PORT31 As Integer = &H1F '//Port 31

'/**
'*
'*  Bitrate configuration options
'*
'**/

Public Const BITRATE422_CLK1 As Integer = &H8000    '//CLK1, 20 MHz (default)
Public Const BITRATE422_CLK2 As Integer = &H0    '//CLK2, 9.216 MHz (standard option)
Public Const BITRATE422_CLK3 As Integer = &H1000    '//CLK3, Parametric clock
Public Const BITRATE422_XMTSLOPEHIGH As Integer = &H0    '//Transmit with high speed slope (default)
Public Const BITRATE422_XMTSLOPELOW As Integer = &H4000 '//Transmit with low speed slope

'// These defines assume an external clock of 9.216 MHz
Public Const BITRATE422_921600BPS As Integer = &H0   '//External Clock, Div = 0
Public Const BITRATE422_460800BPS As Integer = &H1   '//External Clock, Div = 1
Public Const BITRATE422_230400BPS As Integer = &H3   '//External Clock, Div = 3
Public Const BITRATE422_115200BPS As Integer = &H7   '//External Clock, Div = 7
Public Const BITRATE422_57600BPS As Integer = &HF    '//External Clock, Div = 15
Public Const BITRATE422_38400BPS As Integer = &H17    '//External Clock, Div = 23
Public Const BITRATE422_28800BPS As Integer = &H1F    '//External Clock, Div = 31
Public Const BITRATE422_19200BPS As Integer = &H2F    '//External Clock, Div = 47
Public Const BITRATE422_14400BPS As Integer = &H3F    '//External Clock, Div = 63
Public Const BITRATE422_9600BPS As Integer = &H5F '//External Clock, Div = 95
Public Const BITRATE422_7200BPS As Integer = &H7F '//External Clock, Div = 127
Public Const BITRATE422_4800BPS As Integer = &HBF '//External Clock, Div = 191
Public Const BITRATE422_3600BPS As Integer = &HFF '//External Clock, Div = 255
Public Const BITRATE422_2400BPS As Integer = &H17F '//External Clock, Div = 383
Public Const BITRATE422_1800BPS As Integer = &H1FF '//External Clock, Div = 511
Public Const BITRATE422_1200BPS As Integer = &H2FF '//External Clock, Div = 767
Public Const BITRATE422_900BPS As Integer = &H3FF  '//External Clock, Div = 1023
Public Const BITRATE422_600BPS As Integer = &H5FF  '//External Clock, Div = 1535
Public Const BITRATE422_300BPS As Integer = &HBFF  '//External Clock, Div = 3071

Public Const BITRATE422_1000000BPS As Integer = &H8001  '//Internal Clock, Div = 1
Public Const BITRATE422_500000BPS As Integer = &H8003   '//Internal Clock, Div = 3
Public Const BITRATE422_400000BPS As Integer = &H8004   '//Internal Clock, Div = 4
Public Const BITRATE422_250000BPS As Integer = &H8007   '//Internal Clock, Div = 7
Public Const BITRATE422_200000BPS As Integer = &H8009   '//Internal Clock, Div = 9
Public Const BITRATE422_100000BPS As Integer = &H8013   '//Internal Clock, Div = 19
Public Const BITRATE422_80000BPS As Integer = &H8018    '//Internal Clock, Div = 24
Public Const BITRATE422_50000BPS As Integer = &H8027    '//Internal Clock, Div = 39
Public Const BITRATE422_40000BPS As Integer = &H8031    '//Internal Clock, Div = 49
Public Const BITRATE422_25000BPS As Integer = &H804F    '//Internal Clock, Div = 79
Public Const BITRATE422_20000BPS As Integer = &H8063    '//Internal Clock, Div = 99
Public Const BITRATE422_12500BPS As Integer = &H809F    '//Internal Clock, Div = 159
Public Const BITRATE422_10000BPS As Integer = &H80C7    '//Internal Clock, Div = 199

'/**
'*
'*  Port configuration options
'*
'**/
